# 49travel

./: .gitignore  Makefile  README.md  package-lock.json  package.json
.github/workflows/: pytest.yaml
public/: index.html
python/batch/: Makefile  README.md  linter.sh  mypy.ini  pyproject.toml  static_checks.sh
python/batch/archive/: destinations.py
python/batch/data/: berlin.json  cities.sqlite  düsseldorf.json  hamburg.json  munich.json  stuttgart.json
python/batch/src/: cities.py  city_json.py  common.py  destinations.py  hamburg_json.py  langchain_summarize.py  model.py
python/batch/src/hafas/: fptf.py  retry_hafas.py
python/batch/test/: test_cities.py  test_city_json.py  test_destinations.py
python/batch/test/data/: cities.sqlite  destinations.json
src/: App.css  App.js  SinglePage.js  index.js
src/components/: About.js  Home.js  SinglePage.js  TopBar.js  loadMd.js
src/components/hamburg_towns/: destinations.md
src/data/: cologne.json  frankfurt.json  hamburg.json  hamburg_destinations.json
src/origin/: CityPage.js  Hamburg.js
src/sitetheme/: markdownOptions.js
